--- a/weather.html
+++ b/weather.html
@@ -4,24 +4,41 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Weather</title>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link href="mycss.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-6">
       <!-- Large button group -->
       <div class="btn-group">
         <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-          Taipei <span class="caret"></span>
+          台北市<span class="caret"></span>
         </button>
         <ul id="dropdown" class="dropdown-menu" role="menu">
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Taipei</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Tainan</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Hualien</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Taidong</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>台北市</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>新北市</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>台中市</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>台南市</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>高雄市</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>基隆市</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>桃園市</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>新竹市</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>新竹縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>苗栗縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>彰化縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>南投縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>雲林縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>嘉義市</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>嘉義縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>屏東縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>宜蘭縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>花蓮縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>台東縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>澎湖縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>金門縣</span></a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#" class="temp"><sapn>連江縣</span></a></li>
         </ul>
       </div>
       <div><span class="temperature">23</span> &#8451;</div>
@@ -43,16 +60,16 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th>5 May 2015</th>
-                  <th>6 May 2015</th>
-                  <th>7 May 2015</th>
+                  <th id="tomDateA">5 May 2015</th>
+                  <th id="tomDateB">6 May 2015</th>
+                  <th id="tomDateC">7 May 2015</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>17-23 &#8451;</td>
-                  <td>18-26 &#8451;</td>
-                  <td>15-24 &#8451;</td>
+                  <td id="tomTempA">17-23 &#8451;</td>
+                  <td id="tomTempB">18-26 &#8451;</td>
+                  <td id="tomTempC">15-24 &#8451;</td>
                 </tr>
                 <tr>
                   <td><canvas id="day1" width="64" height="64">Clear</canvas></td>
@@ -67,9 +84,12 @@
   
 </div>
 
-<script src="//code.jquery.com/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> 
-<script src="//darkskyapp.github.io/skycons/skycons.js"></script>
+<script src="http://code.jquery.com/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!-- <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>  -->
+<script src="http://darkskyapp.github.io/skycons/skycons.js"></script>
 <script src="myapp.js"></script>
+<script src="https://query.yahooapis.com/v1/public/yql?q=select wind from weather.forecast where woeid in (select woeid from geo.places(1) where text='chicago, il')&format=json&callback=callbackFunction"></script>
 </body>
 </html>
